# WalkiTalki

./: .gitignore  Architecture.md  Building Spec.txt  FastAPIBackendSpec.md  Ideation.md  MVP.md  OpenClawArchitecture.md  OpenClawMVP.md  README.md  ReactFrontendSpec.md
OpenClaw MVP/backend/: README.md  pyproject.toml
OpenClaw MVP/backend/app/: main.py
OpenClaw MVP/backend/app/api/: openclaw_agent.py
OpenClaw MVP/backend/app/schemas/: openclaw.py
OpenClaw MVP/backend/app/services/: agent_store.py  codex_direct_stream.mjs  example_agent.py  openclaw_client.py  openclaw_sessions.py
OpenClaw MVP/backend/openclaw_workspace/skills/lesson-formatting/: SKILL.md
OpenClaw MVP/frontend/: index.html  package.json
OpenClaw MVP/frontend/src/: App.tsx  Markdown.tsx  api.ts  styles.css  types.ts
backend/: .gitignore  alembic.ini  pyproject.toml
backend/alembic/versions/: 20260514_0001_initial_mvp.py
backend/app/: __init__.py  main.py
backend/app/api/: agents.py  deps.py  lessons.py  runtime.py  shared_agents.py
backend/app/core/: config.py  errors.py  session.py
backend/app/db/: session.py
backend/app/models/: __init__.py  agent.py  lesson.py
backend/app/schemas/: agents.py  common.py  lessons.py  runtime.py
backend/app/services/: openai_client.py  prompts.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  types.ts  validation.ts
frontend/src/api/: client.ts
frontend/src/components/: AgentSummary.module.css  AgentSummary.tsx  ApiKeyConnect.module.css  ApiKeyConnect.tsx  CapabilityGrid.module.css  CapabilityGrid.tsx  (+6 more)
(+12 files in other folders)
