[project]
name = "walkitalki-backend"
version = "0.1.0"
description = "FastAPI MVP backend for WalkiTalki"
requires-python = ">=3.9"
dependencies = [
  "alembic>=1.13.0",
  "fastapi>=0.110.0",
  "openai>=1.59.0",
  "psycopg[binary]>=3.1.0",
  "pydantic>=2.7.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
